--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/ReturnZero23/threejs_demo/issues"
   },
-  "homepage": "https://github.com/ReturnZero23/threejs_demo#readme"
+  "homepage": "https://github.com/ReturnZero23/threejs_demo#readme",
+  "dependencies": {
+    "@types/node": "^14.0.1",
+    "@types/three": "^0.103.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^4.3.0",
+    "three": "^0.116.1",
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2",
+    "webpack-cli": "^3.3.11"
+  }
 }
